--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -1,24 +1,25 @@
 {
-  "name": "@repo/eslint-config",
+  "name": "@bible/eslint-config",
   "version": "0.0.0",
-  "type": "module",
+  "files": [
+    "lib.js",
+    "next.js",
+    "node.js",
+    "react.js"
+  ],
+  "license": "MIT",
   "private": true,
-  "exports": {
-    "./base": "./base.js",
-    "./next-js": "./next.js",
-    "./react-internal": "./react-internal.js"
-  },
   "devDependencies": {
-    "@eslint/js": "^9.29.0",
-    "@next/eslint-plugin-next": "^15.3.0",
-    "eslint": "^9.29.0",
-    "eslint-config-prettier": "^10.1.1",
-    "eslint-plugin-only-warn": "^1.1.0",
-    "eslint-plugin-react": "^7.37.5",
-    "eslint-plugin-react-hooks": "^5.2.0",
-    "eslint-plugin-turbo": "^2.5.0",
-    "globals": "^16.2.0",
-    "typescript": "^5.8.2",
-    "typescript-eslint": "^8.34.0"
-  }
+    "@rocketseat/eslint-config": "2.2.2",
+    "eslint-config-next": "^14.1.0",
+    "eslint-plugin-simple-import-sort": "^10.0.0",
+    "@bible/prettier": "workspace:*"
+  },
+  "eslintConfig": {
+    "root": true,
+    "extends": [
+      "./lib.js"
+    ]
+  },
+  "prettier": "@bible/prettier"
 }
