--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -55,7 +55,8 @@
     "sonner": "^2.0.5",
     "tailwind-merge": "^3.3.1",
     "vaul": "^1.1.2",
-    "zod": "^3.25.67"
+    "zod": "^3.25.67",
+    "@bible/translations": "workspace:*"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
